# PromptStudio

./: .eslintignore  .eslintrc  .gitattributes  .gitignore  .prettierignore  .prettierrc  CONTRIBUTING.md  README-zhCN.md  README.md  package.json  pnpm-lock.yaml  splash.html  tsconfig.node.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: lint.yml  publish.yml
.husky/: pre-commit
scripts/: gen-release.js
src/: App.css  App.tsx  fluent-icons.css  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  logger.rs  main.rs
src/i18n/: en-US.json  zh-CN.json
src/pages/: About.module.css  About.tsx  Editor.css  Editor.module.css  Editor.tsx  History.module.css  History.tsx  License.tsx  Settings.css  Settings.module.css  Settings.tsx  SideMenu.css  SideMenu.module.css  SideMenu.tsx  TitleBar.css  TitleBar.module.css  TitleBar.tsx
src/utils/: command.ts  hooks.ts  i18n.ts  log.ts
