[package]
name = "prompt-studio"
version = "0.0.1-7"
description = "A Tauri App"
authors = ["you"]
license = "AGPL-3"
repository = "https://github.com/lightsing/PromptStudio"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
async-openai = "0.16"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
once_cell = "1.18"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
sys-locale = "0.3"
tauri = { version = "1.5", features = [ "updater", "window-set-title", "window-unminimize", "window-maximize", "window-unmaximize", "window-close", "window-minimize", "window-set-decorations", "window-set-size", "window-set-focus", "window-start-dragging", "shell-open"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
backtrace = "0.3.69"
futures-util = "0.3.29"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
